prevent stretching vertically

--- a/src/components/common/CardGrid/CardGrid.module.scss
+++ b/src/components/common/CardGrid/CardGrid.module.scss
@@ -3,6 +3,7 @@
 
 .wrapper {
   display: grid;
+  height: fit-content;
   justify-items: center;
 
   .slider {
